--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -5,5 +5,11 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #1a1a1a;
+  color: #f1f1f1;
+  background-color: #1a1a1a;
+}
+
+.table-container {
+  max-height: 300px;
+  overflow: auto;
 }
